--- a/Repowatcher/Repowatcher.csproj
+++ b/Repowatcher/Repowatcher.csproj
@@ -2,13 +2,13 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Discord.Net" Version="3.18.0-beta.3" />
+      <PackageReference Include="Discord.Net" Version="3.18.0" />
       <PackageReference Include="DotNetEnv" Version="3.1.1" />
     </ItemGroup>
 
